# adminds

./: CLAUDE.md  document.xml  geneva.docx  logo-preview.html
.claude/: settings.json
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/classification/: constants.py  helpers.py  routes.py  schemas.py  services.py  store.py
backend/app/report/: constants.py  routes.py  schemas.py  services.py
backend/app/routers/: waitlist.py
backend/app/services/: docx_filler.py  docx_filler_geneve.py  email.py  fribourg_field_map.py  geneve_field_map.py
backend/scripts/: regen_report.py
backend/templates/: fribourg.docx
frontend/: .env.example  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/public/templates/: fribourg-filled.docx  geneve-filled.docx
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(marketing)/: layout.tsx  page.tsx
frontend/src/components/: empty-state.tsx  fieldset.tsx  logo.tsx  select.tsx
frontend/src/lib/: api.ts  mock-data.ts  utils.ts
marketing/: logo-export.html  logo-preview.html
marketing/ads/: ad-1-pain-point.html  ad-3-cocreation.html
marketing/leads/: README.md  details_cache.json  details_cache_fribourg.json  details_cache_neuchatel.json  psychiatrists_fribourg.xlsx  psychiatrists_geneva.xlsx  psychiatrists_neuchatel.xlsx  scrape_fmh.py  scrape_fmh_fribourg.py  scrape_fmh_neuchatel.py
memory/: architecture.md  auth.md  backend.md  frontend.md  lessons.md  product.md  status.md
(+21 files in other folders)
